# better-club-management-system

./: .env.copy  .gitignore  Better Club Management System.drawio  README.md  pyproject.toml  settings.toml
bcms/: database.py  main.py  scopes.py  settings.py
bcms/models/: auth.py  token.py  user.py
bcms/models/requests/: register.py  update_user.py
bcms/routes/: auth.py  user.py
bcms/utils/: token.py  user.py
prisma/: schema.prisma
prisma/migrations/20240916130408_create/: migration.sql
prisma/migrations/20241107172157_trial1/: migration.sql
prisma/migrations/20241108031043_add_email/: migration.sql
prisma/migrations/20241108032947_add_scopes/: migration.sql
prisma/migrations/20241108033321_remove_bad_defaults/: migration.sql
prisma/migrations/20241108060037_make_singular/: migration.sql
prisma/migrations/20241108095941_cascade_auth_and_user/: migration.sql
prisma/migrations/20241108114125_add_board_department/: migration.sql
prisma/migrations/20241110070631_add_board/: migration.sql
scripts/: format_project.py  update_prisma.py
tests/: conftest.py  test_auth.py
